src/test/deca/context/valid/testReadInt.deca
// Decription : Teste readInt
{
    int x;
    x = readInt();
    println(x);
}
