src/test/deca/context/invalid/testWrongPrint.deca
// Description : print avec un mauvais argument
{
    boolean x;
    println(x);
}
